syntax = "proto3";

option go_package = "./line";

package line;

service Line {
  rpc SignIn (AccessData) returns (LineResponse) {}
}

// Request

message AccessData {
  string token = 1;
  string extra = 2;
}

// Response

message LineResponse {
  string accessToken = 1;
  uint32 accessTokenExpireIn = 2;
  string refreshToken = 3;
  string userId = 4;
  string name = 5;
  string picture = 6;
  string email = 7;
  string error = 8;
}